--- a/public/styles/custom.scss
+++ b/public/styles/custom.scss
@@ -2,3 +2,10 @@
 input[type='radio']{
   margin-right: 8px;
 }
+
+
+.alert.alert-danger {
+    margin-top: 2px;
+    font-size: 12px;
+    padding: 5px;
+}
