--- a/public/styles/custom.scss
+++ b/public/styles/custom.scss
@@ -3,9 +3,29 @@ input[type='radio']{
   margin-right: 8px;
 }
 
+.form-control.error{
+  border-color: #a94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+
+.form-control.error:focus{
+  border-color: #843534;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483;
+}
+
+
+
 
 .alert.alert-danger {
     margin-top: 2px;
-    font-size: 12px;
-    padding: 5px;
+    background-color: transparent;
+    color: #a94442;
+    margin-bottom: 10px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    border: none;
+    padding: 2px;
 }
