--- a/.storybook/_container.scss
+++ b/.storybook/_container.scss
@@ -1,2 +1,3 @@
+@import '../node_modules/bootstrap/scss/bootstrap-reboot.scss';
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 @import '../public/styles/custom.scss';
