--- a/public/styles/custom.scss
+++ b/public/styles/custom.scss
@@ -3,23 +3,21 @@ input[type='radio']{
   margin-right: 8px;
 }
 
-.form-control.error{
+.form-group.has-error input{
   border-color: #a94442;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
 
 
-.form-control.error:focus{
+.form-group.has-error input:focus{
   border-color: #843534;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483;
 }
 
 
-
-
-.alert.alert-danger {
+.help-block {
     margin-top: 2px;
     background-color: transparent;
     color: #a94442;
