--- a/public/styles/custom.scss
+++ b/public/styles/custom.scss
@@ -1,29 +1,6 @@
+// here you can put all the needed custom css 
 
-input[type='radio']{
-  margin-right: 8px;
-}
+// input[type='radio']{
+//   margin-right: 8px;
+// }
 
-.form-group.has-error input{
-  border-color: #a94442;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-}
-
-
-.form-group.has-error input:focus{
-  border-color: #843534;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483;
-}
-
-
-.help-block {
-    margin-top: 2px;
-    background-color: transparent;
-    color: #a94442;
-    margin-bottom: 10px;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    border: none;
-    padding: 2px;
-}
